--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,5 @@ POSTGRES_DATABASE="auth_service_db"
 POSTGRES_USER="auth_db_user"
 POSTGRES_PASSWORD="auth_db_password"
 
+SECRET_KEY="YourSecretKey"
 
